# hardcaml-waveterm

./: .gitignore  .merlin  .travis-ci.sh  .travis.yml  CHANGES.md  HardCamlWaveLTerm.mlpack  HardCamlWaveTerm.mlpack  META  Makefile  README.md  _oasis  _tags  bodge_ppx.sh  gfx.ml  gfx.mli  gfx_html.ml  gfx_html.mli  gfx_lterm.ml  gfx_lterm.mli  hardcaml-waveterm.opam  jbuild  myocamlbuild.ml  opam  render.ml  render.mli  setup.ml  wave.ml  wavehtml.ml  waveterm.ml
apps/: jbuild  wavedraw.ml  waveterm.ml
lterm/: HardCamlWaveLTerm.mldylib  HardCamlWaveLTerm.mllib  HardCamlWaveLTerm.mlpack  api.ml  ui.ml  ui.mli  widget.ml  widget.mli
pkg/: META  META.in  pkg.ml
src/: HardCamlWaveTerm.mllib  HardCamlWaveTerm.mlpack  META  gfx.ml  gfx.mli  gfx_lterm.ml  gfx_lterm.mli  jbuild  lTerm_waveterm_compat.ml  lTerm_waveterm_compat.mli  render.ml  render.mli  sim.ml  sim.mli  ui.ml  ui.mli  wave.ml  wave.mli  widget.ml  widget.mli  write.ml  write.mli
test/: data-render.wave  data.ml  genwave.ml  jbuild  testsim.ml  testsim_lwt.ml  testwidget.ml  testwidget_lwt.ml  toggle.wave  wave.txt  wavedraw.ml  wavehtml.ml  waveterm.ml  waveutf8.ml
