opam-version: "1.2"
maintainer: "andy.ray@ujamjar.com"
authors: "andy.ray@ujamjar.com"
homepage: "https://github.com/ujamjar/hardcaml-waveterm"
dev-repo: "https://github.com/ujamjar/hardcaml-waveterm.git"
bug-reports: "https://github.com/ujamjar/hardcaml-waveterm/issues"
build: [ ["jbuilder" "build" "-p" name "-j" jobs] ]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build & >= "1.0+beta8"}
  "hardcaml" { >= "1.2.0" & < "2.0.0" }
  "astring"
  "lambda-term"
  "lwt" { >= "2.6.0" }
]
available: [ ocaml-version >= "4.02.3" ]
name: "hardcaml-waveterm"
version: "0.3.0"
license: "ISC"
substs:[ "pkg/META" ]

